--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@
   font-family: var(--fonte-primaria);
 }
 
+body{
+  background-color: #F2F4F5;
+}
+
 .cabecalho {
   background-color: #003fdb;
 }
@@ -48,7 +52,7 @@
   display: grid;
   justify-content: center;
   text-align: center;
-  height: 36rem;
+  height: 29rem;
   padding: 7rem;
   background-color: #003fdb;
 }
@@ -100,8 +104,8 @@ nav {
 }
 
 #logo {
-  width: 15rem;
-  height: 3rem;
+  width: 10rem;
+  height: 2rem;
 }
 
 .a-button {
@@ -110,8 +114,8 @@ nav {
   padding: 0.75rem;
   border-radius: 8rem;
   text-decoration: none;
-  width: 7rem;
-  height: 1rem;
+  width: 6rem;
+  height: 1.1rem;
   font-size: 14px;
   font-weight: bold;
   font-family: var(--fonte-primaria);
@@ -134,18 +138,18 @@ nav {
   background-color: var(--cor-bg-botao);
   color: var(--cor-primaria);
   padding: 0.75rem;
-  border-radius: 8rem;
+  border-radius: 5rem;
   text-decoration: none;
-  width: 140px;
-  height: 30px;
+  width: 110px;
+  height: 20px;
   font-size: 14px;
   font-weight: bold;
   font-family: var(--fonte-primaria);
   display: flex;
   justify-content: center;
-  align-items: center;
+  text-align: center;
   cursor: pointer;
-  margin: 1rem;
+  margin: 0.3rem;
   transition: 0.2s;
 }
 
@@ -163,8 +167,8 @@ nav {
 .container_input_email {
   background-color: var(--cor-secundaria);
   border-radius: 9999px;
-  height: 72px;
-  width: 640px;
+  height: 50px;
+  width: 450px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -174,8 +178,8 @@ nav {
   border: none;
   background-color: transparent;
   outline: none;
-  padding: 0 1rem;
-  font-size: 1rem;
+  padding: 1rem;
+  font-size: 0.8rem;
 }
 
 .container_dashboard {
@@ -186,8 +190,8 @@ nav {
 }
 
 .container_dashboard img {
-  width: 100rem;
-  height: 50rem;
+  width: 70rem;
+  height: 35rem;
   border-radius: 2.5rem;
 }
 
@@ -195,11 +199,11 @@ nav {
   display: grid;
   justify-content: center;
   align-items: center;
-  margin-top: 40rem;
+  margin-top: 30rem;
 }
 
 .container_texto h1 {
-  font-size: 50px;
+  font-size: 40px;
   display: grid;
   justify-content: center;
   align-items: center;
@@ -209,17 +213,21 @@ nav {
   width: 100%;
   height: 200px;
   background-color: var(--cor-primaria);
-  margin-top: 5rem;
+  margin-top: 3rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.container_logomarcas img {
+  width: 9rem;
 }
 
 .container_boosting {
   display: grid;
   justify-content: center;
   align-items: center;
-  margin-top: 10rem;
+  margin-top: 7rem;
 }
 
 .container_boosting h1 {
@@ -233,12 +241,12 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 3rem;
+  margin-top: 7rem;
 }
 
 .container_total_expense img {
-  width: 50rem;
-  height: 35rem;
+  width: 27rem;
+  height: 20rem;
 }
 
 .container_optimise {
@@ -252,6 +260,7 @@ nav {
   display: grid;
   gap: 0.5rem;
 }
+
 .container_p p {
   font-size: 20px;
 }
@@ -290,12 +299,14 @@ nav {
 
 .container_modern_pessoas {
   width: 100%;
-  height: 1250px;
+  height: 1100px;
+  margin-top: 7rem;
   background-color: var(--cor-primaria);
 }
 
 .container_title_subtitle h1 {
   color: var(--cor-secundaria);
+
 }
 
 .container_title_subtitle p {
@@ -312,7 +323,7 @@ nav {
   display: grid;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
+  margin-top: 10rem;
   gap: 0.5rem;
   margin-bottom: 2rem;
 }
@@ -350,32 +361,33 @@ nav {
   justify-content: start;
   align-items: start;
   gap: 0.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .container_person img {
-  margin-bottom: 1rem;
-  width: 520px;
-  height: 670px;
+  margin-top: 1rem;
+  width: 350px;
+  height: 450px;
 }
 
 .container_person div h1 {
   color: var(--cor-secundaria);
+  margin-top: 1rem;
   font-weight: 100;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .container_person div h2 {
   color: var(--cor-texto-secundario);
   font-weight: 100;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .container_right_plan {
   display: grid;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
+  margin-top: 8rem;
 }
 
 .container_text_right_plan {
@@ -403,14 +415,20 @@ nav {
   font-size: 18px;
 }
 
-.container_card {
-  width: 388px;
-  height: 400px;
+.container_card_basic {
+  width: 250px;
+  height: 730px;
+  padding: 1rem;
+  border: var(--cor-primaria);
+  border-radius: 1rem;
+  background-color: #FFFFFF;
 }
 
 .container_card_1 {
+  justify-content: center;
   display: grid;
   gap: 1rem;
+  
 }
 
 .container_card_1_text {
@@ -418,31 +436,103 @@ nav {
   gap: 0.5rem;
 }
 
-.container_card_1_text h2 {
-  font-size: 1.5rem;
-  font-weight: 100;
+.container_card_1_text h1 {
+  font-size: 45px;
+  font-weight: 400;
   color: var(--cor-primaria);
 }
+
+.container_card_pro {
+  width: 250px;
+  height: 730px;
+  padding: 1rem;
+  border: var(--cor-primaria);
+  border-radius: 1rem;
+  background-color: #FFFFFF;
+}
+
+
+.container_card_1_text h2 {
+  font-size: 20px;
+  font-weight: 400;
+  color: var(--cor-primaria);
+}
+
+.container_card_2 {
+  border-radius: 100%;
+  border-color: #f6f6f6;
+  justify-content: center;
+  display: grid;
+  gap: 1rem;
+}
+
+.container_card_2_text {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.container_card_2_text h2 {
+  font-size: 20px;
+  font-weight: 400;
+  color: #A3DC2F;
+}
+
+.container_card_2_text h1 {
+  font-size: 45px;
+  font-weight: 400;
+}
+
+.container_card_3 {
+  justify-content: center;
+  display: grid;
+  gap: 1rem;
+}
+
+.container_card_enterprise {
+  width: 250px;
+  height: 730px;
+  padding: 1rem;
+  border: var(--cor-primaria);
+  border-radius: 1rem;
+  background-color: #FFFFFF;
+}
+
+.container_card_3_text {
+  display: grid;
+  gap: 0.5rem;
+}
+
+.container_card_3_text h1 {
+  font-size: 45px;
+  font-weight: 400;
+}
+
+.container_card_3_text h2 {
+  font-size: 20px;
+  font-weight: 400;
+  color: #A3DC2F;
+}
+
 
 .container_descricao {
   display: grid;
   gap: 0.2rem;
+
 }
 
 .container_items {
-  margin-top: 2rem;
   display: grid;
   gap: 2rem;
+
 }
 
 .container_button_select_plan {
   display: flex;
   justify-content: center;
-  align-items: end;
-  height: 100%;
+  align-items: center;
 }
 
-.button_select_plan {
+.button_select_plan_1 {
   background-color: transparent;
   border: var(--cor-primaria) solid 1px;
   color: var(--cor-primaria);
@@ -452,45 +542,127 @@ nav {
   width: 140px;
   height: 20px;
   font-size: 14px;
-  font-weight: bold;
   font-family: var(--fonte-primaria);
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
   transition: 0.2s;
-  margin-right: 10rem;
+  margin-top: 330px;
 }
 
-.button_select_plan:hover {
+.button_select_plan_1:hover {
   background-color: var(--cor-primaria);
   color: var(--cor-secundaria);
 }
 
-.container_select_plan {
-  margin-top: 2rem;
+.button_select_plan_2 {
+  background-color: transparent;
+  border: var(--cor-primaria) solid 1px;
+  color: var(--cor-primaria);
+  padding: 0.75rem;
+  border-radius: 8rem;
+  text-decoration: none;
+  width: 140px;
+  height: 20px;
+  font-size: 14px;
+  font-family: var(--fonte-primaria);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.2s;
+  margin-top: 180px;
+}
+
+.button_select_plan_2:hover {
+  background-color: var(--cor-primaria);
+  color: var(--cor-secundaria);
+}
+
+.button_select_plan_3 {
+  background-color: var(--cor-bg-botao);
+  color: var(--cor-primaria);
+  padding: 0.75rem;
+  border-radius: 8rem;
+  text-decoration: none;
+  width: 140px;
+  height: 20px;
+  font-size: 14px;
+  font-family: var(--fonte-primaria);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.2s;
+  margin-top: 78px;
+}
+
+.button_select_plan_3:hover {
+  background-color: var(--cor-bg-botao-hover);
+  color: var(--cor-primaria);
 }
 
 .container_plans {
   margin-top: 6rem;
+  gap: 3rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
-.container_message {
-  margin-top: 30rem;
-  width: 500px;
-  height: 430px;
+  .container_items {
+    margin-top: 2rem;
+  }
+
+.container_customers {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15rem;
 }
 
-.container_spec {
+.container_costumer_text {
+  margin-top: 2rem;
+}
+
+.container_costumer_text p {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  font-size: 17px;
+}
+
+.container_customers_title h1 {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 50px;
+}
+
+.container_message_first_line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.container_message_second_line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.container_profile_1 {
   display: flex;
   margin-top: 4rem;
   gap: 1rem;
 }
 
-.container_spec div {
+.container_profile_1 div {
   display: grid;
   gap: 0.2rem;
 }
